[gd_scene load_steps=2 format=3 uid="uid://cf23g13k3shi0"]

[ext_resource type="Script" path="res://uiComponents/game_over_ui.gd" id="1_37t8v"]

[node name="GameOverUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_37t8v")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.5
offset_top = -201.0
offset_right = 196.5
offset_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_type_variation = &"HeaderLarge"
text = "Game Over"
horizontal_alignment = 1

[node name="SplashTextLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_type_variation = &"HeaderSmall"
text = "<Splash Text>"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
columns = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Apples Eaten:"
horizontal_alignment = 1

[node name="ApplesEatenLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "<number>"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Longest Length:"
horizontal_alignment = 1

[node name="LongestLengthLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "<number>"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Time:"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "<number>"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Score:"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "<number>"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
alignment = 1

[node name="MainMenuButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 6
text = "Main Menu"

[node name="PlayAgainButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 6
text = "Play Again"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="button_up" from="PanelContainer/VBoxContainer/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_button_up"]
[connection signal="button_up" from="PanelContainer/VBoxContainer/HBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_button_up"]
